ajout récupération suggestions connecté/ non connecté + màj récupération feed non connecté / connecté
